0.9.0.dev0/_sources/gettingstarted/examples/gallery/auto_examples_processing/nmr/plot_processing_nmr.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/nmr/plot_processing_nmr.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_nmr.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_nmr.py:


Processing NMR spectra (slicing, baseline correction, peak picking, peak fitting)
=================================================================================
Various examples of processing NMR spectra

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 18-20

Import API
----------

.. GENERATED FROM PYTHON SOURCE LINES 20-22

.. code-block:: Python

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 23-26

Importing a 2D NMR spectra
--------------------------
Define the folder where are the spectra

.. GENERATED FROM PYTHON SOURCE LINES 26-34

.. code-block:: Python

    datadir = scp.preferences.datadir
    nmrdir = datadir / "nmrdata"

    dataset = scp.nmr.read_topspin(
        nmrdir / "bruker" / "tests" / "nmr" / "topspin_2d" / "1" / "pdata" / "1" / "2rr"
    )






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/spectrochempy/.venv/lib/python3.13/site-packages/spectrochempy/core/readers/importer.py:226: UserWarning: No module named 'spectrochempy_hypercomplex'
      warning_(str(e))




.. GENERATED FROM PYTHON SOURCE LINES 35-38

Analysing the 2D NMD dataset
----------------------------
Print dataset summary

.. GENERATED FROM PYTHON SOURCE LINES 38-40

.. code-block:: Python

    dataset








.. GENERATED FROM PYTHON SOURCE LINES 41-42

Plot the dataset

.. GENERATED FROM PYTHON SOURCE LINES 42-43

.. code-block:: Python

    dataset.plot_map()


.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "/home/runner/work/spectrochempy/spectrochempy/build/~gallery_examples/processing/nmr/plot_processing_nmr.py", line 42, in <module>
        dataset.plot_map()
        ^^^^^^^^^^^^^^^^
    AttributeError: 'NoneType' object has no attribute 'plot_map'




.. GENERATED FROM PYTHON SOURCE LINES 44-45

Extract slices along x

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: Python

    s = dataset[-27.6, :]
    s.plot()

.. GENERATED FROM PYTHON SOURCE LINES 48-50

Baseline correction of this slice
Note that only the real part is corrected

.. GENERATED FROM PYTHON SOURCE LINES 50-52

.. code-block:: Python

    sa = s.snip(snip_width=100)
    sa.plot()

.. GENERATED FROM PYTHON SOURCE LINES 53-54

apply this correction to the whole dataset

.. GENERATED FROM PYTHON SOURCE LINES 54-56

.. code-block:: Python

    sb = dataset.snip(snip_width=100)
    sb.plot_map()

.. GENERATED FROM PYTHON SOURCE LINES 57-58

Select a region of interest

.. GENERATED FROM PYTHON SOURCE LINES 58-62

.. code-block:: Python

    sc = sb[
        -40.0:-15.0, 55.0:20.0
    ]  # note the use of float to make selection using coordinates (not point indexes)
    sc.plot_map()

.. GENERATED FROM PYTHON SOURCE LINES 63-64

Extract slices along x

.. GENERATED FROM PYTHON SOURCE LINES 64-66

.. code-block:: Python

    s1 = sc[-27.6, :]
    s1.plot()

.. GENERATED FROM PYTHON SOURCE LINES 67-69

.. code-block:: Python

    s2 = sc[-25.7, :]
    s2.plot()

.. GENERATED FROM PYTHON SOURCE LINES 70-71

plot two slices on the same figure

.. GENERATED FROM PYTHON SOURCE LINES 71-77

.. code-block:: Python

    s1.plot()
    s2.plot(
        clear=False,
        color="red",
        linestyle="-",
    )

.. GENERATED FROM PYTHON SOURCE LINES 78-79

Now slice along y

.. GENERATED FROM PYTHON SOURCE LINES 79-82

.. code-block:: Python

    s3 = sc[:, 40.0]
    s4 = sc[:, 36.0]


.. GENERATED FROM PYTHON SOURCE LINES 83-89

IMPORTANT: note that when the slice is along y, this results in a column vector of
shape (308, 1). When an NDDataset method is applied to this slice, such as a baseline
correction, it will be applied by default to the last dimension [rows] (in this case
the dimension of size 1, which is not what is generally expected). To avoid this,
we can use the squeeze method to remove this dimension or transpose the slice to
obtain a vector of rows of shape (1, 308)

.. GENERATED FROM PYTHON SOURCE LINES 89-92

.. code-block:: Python

    s3 = s3.squeeze()
    s4 = s4.squeeze()


.. GENERATED FROM PYTHON SOURCE LINES 93-94

plot the two slices on the same figure

.. GENERATED FROM PYTHON SOURCE LINES 94-96

.. code-block:: Python

    s3.plot(color="violet", ls="-", lw="2")
    s4.plot(clear=False, color="green", ls="-", lw="2")

.. GENERATED FROM PYTHON SOURCE LINES 97-99

Peak picking
------------

.. GENERATED FROM PYTHON SOURCE LINES 99-102

.. code-block:: Python

    peaks, _ = s2.find_peaks()



.. GENERATED FROM PYTHON SOURCE LINES 103-105

plot the position of the peaks
For this we will define a plot function that we be reused later

.. GENERATED FROM PYTHON SOURCE LINES 105-131

.. code-block:: Python



    def plot_with_pp(s, peaks):
        ax = s.plot()  # output the spectrum on ax. ax will receive next plot too;
        pks = peaks + 0.2  # add a small offset on the y position of the markers
        pks.plot_scatter(
            ax=ax,
            marker="v",
            color="black",
            clear=False,  # we need to keep the previous output on ax
            data_only=True,  # we don't need to redraw all things like labels, etc...
            ylim=(-0.1, 7),
        )
        for p in pks:
            x, y = p.coord(-1).values.m, (p + 0.2).values.m
            ax.annotate(
                f"{x:0.1f}",
                xy=(x, y),
                xytext=(-5, 5),
                rotation=90,
                textcoords="offset points",
            )


    plot_with_pp(s2, peaks)


.. GENERATED FROM PYTHON SOURCE LINES 132-133

Set some parameters to get less but significant peaks

.. GENERATED FROM PYTHON SOURCE LINES 133-136

.. code-block:: Python

    peaks, _ = s2.find_peaks(height=1.0, distance=1.0)
    plot_with_pp(s2, peaks)


.. GENERATED FROM PYTHON SOURCE LINES 137-138

Now look in the other dimension using slice s4

.. GENERATED FROM PYTHON SOURCE LINES 138-141

.. code-block:: Python

    peaks, _ = s4.find_peaks(height=1.0, distance=1.0)
    plot_with_pp(s4, peaks)


.. GENERATED FROM PYTHON SOURCE LINES 142-146

Peak fitting
------------

Fit parameters are defined in a script (a single text as below)

.. GENERATED FROM PYTHON SOURCE LINES 146-201

.. code-block:: Python

    script = """
    #-----------------------------------------------------------
    # syntax for parameters definition:
    # name: value, low_bound,  high_bound
    # available prefix:
    #  # for comments
    #  * for fixed parameters
    #  $ for variable parameters
    #  > for reference to a parameter in the COMMON block
    #    (> is forbidden in the COMMON block)
    # common block parameters should not have a _ in their names
    #-----------------------------------------------------------
    #

    COMMON:
    $ commonwidth: 1, 0, 5
    $ commonratio: .5, 0, 1

    MODEL: LINE_1
    shape: voigtmodel
        $ ampl:  1, 0.0, none
        $ pos:   -21.7, -22., -20
        > ratio: commonratio
        > width: commonwidth

    MODEL: LINE_2
    shape: voigtmodel
        $ ampl:  4, 0.0, none
        $ pos:   -24, -24.5, -23.5
        > ratio: commonratio
        > width: commonwidth

    MODEL: LINE_3
    shape: voigtmodel
        $ ampl:  4, 0.0, none
        $ pos:   -25.4, -25.8, -25
        > ratio: commonratio
        > width: commonwidth

    MODEL: LINE_4
    shape: voigtmodel
        $ ampl:  4, 0.0, none
        $ pos:   -27.8, -28.5, -27
        > ratio: commonratio
        > width: commonwidth

    MODEL: LINE_5
    shape: voigtmodel
        $ ampl:  4, 0.0, none
        $ pos:   -31.5, -32, -31
        > ratio: commonratio
        > width: commonwidth

    """


.. GENERATED FROM PYTHON SOURCE LINES 202-203

We will work here on the slice s4 (taken in the y dimension).

.. GENERATED FROM PYTHON SOURCE LINES 203-205

.. code-block:: Python

    s4p = s4.snip()  # Baseline correction


.. GENERATED FROM PYTHON SOURCE LINES 206-207

create an Optimize object

.. GENERATED FROM PYTHON SOURCE LINES 207-209

.. code-block:: Python

    f1 = scp.Optimize(log_level="INFO")


.. GENERATED FROM PYTHON SOURCE LINES 210-211

Set parameters

.. GENERATED FROM PYTHON SOURCE LINES 211-215

.. code-block:: Python

    f1.script = script
    f1.max_iter = 5000



.. GENERATED FROM PYTHON SOURCE LINES 216-217

Fit the slice s4p

.. GENERATED FROM PYTHON SOURCE LINES 217-219

.. code-block:: Python

    f1.fit(s4p)


.. GENERATED FROM PYTHON SOURCE LINES 220-221

Show the result

.. GENERATED FROM PYTHON SOURCE LINES 221-229

.. code-block:: Python

    s4p.plot()
    ax = (f1.components[:]).plot(clear=False)
    ax.autoscale(enable=True, axis="y")

    # Plotmerit
    som = f1.inverse_transform()
    f1.plotmerit(offset=2)


.. GENERATED FROM PYTHON SOURCE LINES 230-232

This ends the example ! The following line can be removed or commented
when the example is run as a notebook (`.ipynb`).

.. GENERATED FROM PYTHON SOURCE LINES 232-234

.. code-block:: Python


    # scp.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.017 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_nmr.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_processing_nmr.ipynb <plot_processing_nmr.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_processing_nmr.py <plot_processing_nmr.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_processing_nmr.zip <plot_processing_nmr.zip>`
